force-app/main/default/objects/Slack_Webhook__c/Slack_Webhook__c.object-meta.xml
<CustomObject>
    <label>Slack Webhook</label>
    <nameField>
        <label>Slack Webhooks Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Slack Webhooks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>