force-app/main/default/objects/Slack_Webhook__c/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Indicates if the webhook should be used to send notifications. Disabling will prevent messages being sent to slack</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>