force-app/main/default/objects/Slack_Webhook__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <inlineHelpText>Describe why this webhook exists and what it is used for.</inlineHelpText>
    <label>Purpose</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>