force-app/main/default/objects/Slack_Webhook__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <inlineHelpText>The webhook URL from the slack app. Example: https://hooks.slack.com/services/########/##########/#######################</inlineHelpText>
    <label>URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>