force-app/main/default/objects/Slack_Webhook__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Purpose__c</columns>
    <columns>URL__c</columns>
    <columns>Enabled__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>!All</label>
</ListView>